fixed visibility issue of location

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -74,7 +74,7 @@
     margin-top: 4px;
 }
 
-.card .location  {
+.card .location {
     position: absolute;
     top: 7px;
     right: 10px;
@@ -87,6 +87,9 @@
 
 #location {
     color: rgb(255, 255, 255);
+    background-color: #00000052;
+    border-radius: 10px;
+    padding: 0px 5px;
 }
 
 .card .location i {
